# Qt6_CMake_Deploy

./: .gitignore  AddQChartView2Widget.md  CMakeLists.old.txt  CMakeLists.txt  LinuxDeploy.md  README.md  dependencies.txt  main.cpp  plotwindow.cpp  plotwindow.h  plotwindow.ui  ringbuffer.cpp  ringbuffer.h  targetError.md
AppDir/: .DirIcon  AppRun.wrapped  Qt6_CMake_Deploy.desktop
AppDir/usr/share/applications/: Qt6_CMake_Deploy.desktop
